# roc-ecs

./: README.md  build-roc.sh  run-example.sh
raw-cpp/: .gitignore  acton-inspired-ecs.h  ecs.h  main.cc  meson.build  roc-ecs-platform.h  simple-ecs.h
raw-cpp/subprojects/: pcg.wrap
roc-simple-ecs/: .gitignore  Package-Config.roc  Program.roc  Random.roc  Signiture.roc  build.sh  host.cc  main.cc  meson.build  roc-ecs-platform.h  simpleEcs.roc
